# Course_work_3

./: pyproject.toml
core/: config.py  main.py  utils.py
tests/: test_main.py  test_utils.py
