[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Mikhail Glushkov <miggl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
